kubernetes/apps/observability/pulse/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: pulse
  name: pulse
spec:
  hostnames:
    - pulse.kantai.xyz
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: pulse
          port: 7655
